@@ -9,6 +9,6 @@ DEBUG=on
 DEBUG_LEVEL=lines,vars,source               
              
 # Vesion number
-VERSION=0.8
+VERSION=CVS-0.9
     	
                
