@@ -17,31 +17,68 @@
          ================================= -->
     <target name="all" depends="clean,build" description="--> Builds jnotify library">
     </target>
-
+	
     <!-- - - - - - - - - - - - - - - - - - 
           target: clean                      
          - - - - - - - - - - - - - - - - - -->
-    <target name="clean" depends="setup">
+    <target name="clean" depends="setup,clean_linux,clean_win32">
+    </target>
+	
+	
+    <!-- - - - - - - - - - - - - - - - - - 
+          target: clean_linux                      
+         - - - - - - - - - - - - - - - - - -->
+    <target name="clean_linux">
 		<delete failonerror="false" dir="${BUILD_DIR}" />
 		<ant antfile="native_build.xml" target="clean">
 			<property name="platform" value="linux"/>
 		</ant>
-		
-		<ant antfile="native_build.xml" target="clean">
-			<property name="platform" value="win32"/>
-		</ant>
-		
-    	
     </target>
+
 	
     <!-- - - - - - - - - - - - - - - - - - 
-          target: build                      
+          target: clean_win32                      
          - - - - - - - - - - - - - - - - - -->
-    <target name="build" depends="setup">
+    <target name="clean_win32">
+		<ant antfile="native_build.xml" target="clean">
+			<property name="platform" value="win32"/>
+		</ant>            
+    </target>
+	
+	
+    <!-- - - - - - - - - - - - - - - - - - 
+          target: build_native_linux                      
+         - - - - - - - - - - - - - - - - - -->
+    <target name="build_native_linux">
+    	<ant antfile="native_build.xml" target="build">
+    		<property name="platform" value="linux"/>
+    		<property name="output" value="${BUILD_DIR}/output"/>
+    		<property name="version" value="${VERSION}"/>
+    	</ant>            
+    </target>
+	
+	
+    <!-- - - - - - - - - - - - - - - - - - 
+          target: build_native_win32                      
+         - - - - - - - - - - - - - - - - - -->
+    <target name="build_native_win32">
+    	<ant antfile="native_build.xml" target="build">
+    		<property name="platform" value="win32"/>
+    		<property name="output" value="${BUILD_DIR}/output"/>
+    		<property name="version" value="${VERSION}"/>
+    	</ant>
+    </target>
+	
+	
+    <!-- - - - - - - - - - - - - - - - - - 
+          target: build_java                      
+         - - - - - - - - - - - - - - - - - -->
+    <target name="build_java">
     	<mkdir dir="${BUILD_DIR}/bin"/>
     	<mkdir dir="${BUILD_DIR}/output"/>
     	<mkdir dir="${BUILD_DIR}/dist"/>
-
+    	
+    	
     	<javac source="1.3" target="1.3" srcdir="src" destdir="${BUILD_DIR}/bin" debug="${DEBUG}" debuglevel="${DEBUG_LEVEL}" />
     	
 		<jar destfile="${BUILD_DIR}/output/jnotify-${VERSION}.jar" basedir="${BUILD_DIR}/bin" update="true" duplicate="fail">
@@ -50,33 +87,77 @@
 			</manifest>
 		</jar>
     	
+		<concat destfile="${BUILD_DIR}/output/CHANGELOG" append="true" fixlastline="true">
+			<filelist dir="." files="CHANGELOG"/>
+		</concat>
+    </target>
+
+
+ 	
+    <!-- - - - - - - - - - - - - - - - - - 
+          target: copy_res                      
+         - - - - - - - - - - - - - - - - - -->
+    <target name="pack">
+    	
 		<zip destfile="${BUILD_DIR}/output/jnotify-${VERSION}-src.zip" update="true"
 			basedir="src"
 		/>
     	
-    	
-		<concat destfile="${BUILD_DIR}/output/CHANGELOG" append="true" fixlastline="true">
-			<filelist dir="." files="CHANGELOG"/>
-		</concat>
-    	<ant antfile="native_build.xml" target="build">
-    		<property name="platform" value="linux"/>
-    		<property name="output" value="${BUILD_DIR}/output"/>
-    		<property name="version" value="${VERSION}"/>
-    	</ant>
-    	<ant antfile="native_build.xml" target="build">
-    		<property name="platform" value="win32"/>
-    		<property name="output" value="${BUILD_DIR}/output"/>
-    		<property name="version" value="${VERSION}"/>
-    	</ant>
-        	
     	<copy todir="${BUILD_DIR}/output/" verbose="true"  failonerror="true">
     		<fileset dir="." excludes="${bin.excludes}" includes="${bin.includes}" />
     	</copy>
     	
     	<zip destfile="${BUILD_DIR}/dist/jnotify-lib-${VERSION}.zip">
     		<fileset dir="${BUILD_DIR}/output"/>
-    	</zip>    	
+    	</zip>
+    	
+    	<!-- Packs a tar.gz for debian tools (windows not included) -->
+    	<tar destfile="${BUILD_DIR}/dist/libjnotify-${VERSION}.tar.gz" compression="gzip">
+			<tarfileset dir="."
+				prefix="libjnotify-${VERSION}/jnotify"
+				preserveLeadingSlashes="true">
+				<include name="*"/>
+				<include name="doc/**"/>
+				<include name="src/**"/>
+			</tarfileset>    	
+    		
+			<tarfileset dir="../jnotify_linux"
+				prefix="jnotify-lib-${VERSION}/jnotify_linux"
+				preserveLeadingSlashes="true">
+				<include name="*"/>
+				<include name="Debug/makefile"/>
+				<include name="Debug/*.mk"/>
+				<include name="Release/makefile"/>
+				<include name="Release/*.mk"/>
+			</tarfileset> 
+   		</tar>    	
     </target>
+
+
+	
+    <!-- - - - - - - - - - - - - - - - - - 
+          target: build                      
+         - - - - - - - - - - - - - - - - - -->
+    <target name="build" depends="setup">
+    	<antcall target="build_java"></antcall>
+    	<antcall target="build_native_linux"></antcall>
+    	<antcall target="build_native_win32"></antcall>
+    	<antcall target="pack"></antcall>
+    </target>
+	
+    <target name="build_deb" depends="setup">
+    	<antcall target="build_java"></antcall>
+    	<antcall target="build_native_linux"></antcall>
+    	
+    	<copy todir="${BUILD_DIR}/output/" verbose="true"  failonerror="true">
+    		<fileset dir="." excludes="${bin.excludes}" includes="${bin.includes}" />
+    	</copy>
+    	
+    	<!-- get rid of the src zip, we don't need it here -->
+    	<delete file="${BUILD_DIR}/output/jnotify-native-linux-${VERSION}-src.zip"/>
+    	
+    </target>
+	
 	
 	
     <!-- - - - - - - - - - - - - - - - - - 
@@ -86,8 +167,6 @@
     	<property name="BUILD_DIR" value="build"/>
     	<loadproperties srcfile="build.properties" />
     </target>
-
-
 	
 
 </project>
