@@ -1,6 +1,8 @@
 ------------------------------------
 Changes in jnotify (java)
 ------------------------------------
+30/7/2006  : Omry : Added NO_SUCH_FILE_OR_DIRECTORY constant to JNotifyException.
+24/6/2006  : Omry : fixed recursive listening on linux (NPE was thrown in certain cases).
 15/12/2005 : Omry : No longer outputs absolute root path in events.
 15/12/2005 : Omry : API Cleanup : got rid of the get() method in JNotify. moved constants from IJnotify to JNotify
 15/12/2005 : Omry : Fixed bugs with the Linux impl (java side).
